cmake_minimum_required(VERSION 3.18)
project(Uriel)
SET(PATH ${PROJECT_SOURCE_DIR})
add_definitions(-DFMT_HEADER_ONLY)
file(GLOB SDK_SRC "src/Common/*.cpp" "src/Network/*.cpp")
include_directories(src/)
include_directories(third_parties/)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ARCH_FLAG} -std=c++14 -pthread -g -O0 -fno-omit-frame-pointer ")
add_executable(server test/server.cpp ${SDK_SRC} )
add_executable(client test/client.cpp ${SDK_SRC} )