cmake_minimum_required(VERSION 3.10)
project(Uriel)
SET(PATH ${PROJECT_SOURCE_DIR})
add_definitions(-DFMT_HEADER_ONLY)
file(GLOB SDK_SRC "src/Common/*.cpp" "src/Network/*.cpp" "src/Network/AsyncIO/*.cpp" "src/Thread/*.cpp")
include_directories(src/)
include_directories(third_parties/)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ARCH_FLAG} -std=c++17 -pthread -lstdc++fs	 -g -O0 -fno-omit-frame-pointer ")
link_libraries(stdc++fs)
add_definitions()
#add_executable(server test/server.cpp ${SDK_SRC} )
#add_executable(client test/client.cpp ${SDK_SRC} )
add_executable(cpptest test/thread.cpp ${SDK_SRC})
add_executable(main test/main.cpp ${SDK_SRC})