cmake_minimum_required(VERSION 3.1)
project(CmakeProject)
add_subdirectory(Asio)
add_subdirectory(Network)
add_subdirectory(ThreadPool)
add_executable(CMakeTest Excuable/CMakeTest.cpp)
target_link_libraries(CMakeTest Network)
target_link_libraries(CMakeTest Asio)
target_link_libraries(CMakeTest ThreadPool)