cmake_minimum_required(VERSION 3.1)
project(CmakeProject)
set(EXECUTABLE_OUTPUT_PATH ./bin)
set(LIBRARY_OUTPUT_DIRECTORY ./bin)
set(LIBRARY_OUTPUT_PATH ./bin)
aux_source_directory(./Asio ASIO)
aux_source_directory(./Excuable EXCUABLE)
aux_source_directory(./Network NETWORK)

# add_subdirectory(Asio)
# add_subdirectory(Network)
# add_subdirectory(ThreadPool)

#add_executable(CMakeTest Excuable/CMakeTest.cpp)
add_library(uriel SHARED ${ASIO} ${EXCUABLE} ${NETWORK})
set_target_properties(uriel PROPERTIES output_name "LMAKE")
# target_link_libraries(CMakeTest Network)
# target_link_libraries(CMakeTest Asio)
# target_link_libraries(CMakeTest ThreadPool)